# ui-rl

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  test_vm_rejection.py
.github/workflows/: ci.yml
config/: multi_vm_distributed.yaml  qwen25_vl_lora.yaml
examples/simple_data_entry/: README.md  generate_rollouts.py  it3_error_rates.pkl  launch_rl_loop.py  launch_vllm.py  migrate_rollout.py  pyproject.toml  rejection_sampling.ipynb  rollout_augmentation.py  rollout_service.py  rollout_uitars15_docker.py  rollout_worker.py  simple_data_entry.py  task.py  train.ipynb  train.py  train_augmented.py  train_rl.py  train_rl_5_rows.py  train_rl_step.py  train_sft.py  utils.py
examples/simple_data_entry/env/: Dockerfile  README.md  server.py
examples/simple_data_entry/experiments/: it1.yaml  it5.yaml
scripts/: TEST_SINGLE_EPISODE.md  test_single_episode.py  test_vm_connection.py  train_with_config.py
src/actor/: task_runner.py
src/config/: config.py
src/data_utils/: collation.py  trajectory.py
src/learner/: trainer.py
src/learner/algorithms/: rejection_sampling.py
src/models/: vlm_wrapper.py
src/orchestration/: actor_pool_manager.py
src/ui_rl/: __init__.py  agent.py  runner.py  task.py  train.ipynb  train.py  validate_dataset.py
src/ui_rl/models/uitars15/: __init__.py  dataset.py  rollout.py
src/ui_rl/rollout/: __init__.py  agent.py  cua.py  generate_rollout_batch.py  rollout.py  runner.py  simple_data_entry.py  strategy.py  task.py  uitars.py
src/ui_rl/rollout/inference/: __init__.py
src/ui_rl/rollout/runtime/: __init__.py  docker.py  kubernetes.py
src/ui_rl/runtime/: __init__.py  docker.py  kubernetes.py
src/ui_rl/train/: train.py
tests/models/uitars15/: test_dataset.py
ui_rl/: cua.py  cua_session.py  generate_rollout_batch.py  holo1.5_test.ipynb  invoke_localization.ipynb  invoke_navigation.ipynb  main.py  navigation.py  simple_data_entry.py  train.ipynb  train.py  uitars.py
ui_rl/rollout/: generate_rollout_batch.py  simple_data_entry.py  strategy.py
