[project]
name = "ui-rl"
version = "0.1.0"
description = "RLVR Finetuning for Computer Use models"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Tobias Norlund", email = "tobias@norlund.se"}
]
dependencies = [
    "accelerate>=1.11.0",
    "datasets>=4.3.0",
    "flash-attn>=2.8.3",
    "ipykernel>=7.1.0",
    "kubernetes>=34.1.0",
    "matplotlib>=3.10.7",
    "peft>=0.17.1",
    "pillow>=11.3.0",
    "tabulate>=0.9.0",
    "torch<2.9",
    "tqdm>=4.67.1",
    "vllm>=0.11.0",
    "wandb>=0.22.3",
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[project.optional-dependencies]
dev = ["pytest"]