[project]
name = "ui-rl"
version = "0.1.0"
description = "RLVR Finetuning for Computer Use models"
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "Tobias Norlund", email = "tobias@norlund.se"}]

dependencies = [
    "accelerate>=1.11.0",
    "datasets>=4.3.0",
    "docker>=7.1.0",
    "flash-attn>=2.8.3",
    "kubernetes>=34.1.0",
    "litellm>=1.80.8",
    "peft>=0.17.1",
    "pillow>=11.3.0",
    "torch<2.9",
    "tqdm>=4.67.1",
    "vllm>=0.11.0",
]

[tool.uv.workspace]
members = ["examples/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=9.6.0",
    "mypy>=1.19.0",
    "pytest",
]

[tool.mypy]
files = ["src/ui_rl", "examples"]
