[project]
name = "ui-rl"
version = "0.1.0"
description = "RLVR Finetuning for Computer Use models"
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "Tobias Norlund", email = "tobias@norlund.se"}]

dependencies = [
    "docker>=7.1.0",
    "httpx>=0.28.1",
    "kubernetes>=34.1.0",
    "pillow>=11.3.0",
    "torch<2.9",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
]

[tool.uv.workspace]
members = ["examples/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=9.6.0",
    "mypy>=1.19.0",
    "pytest",
]

[tool.mypy]
files = ["src/ui_rl", "examples"]
